# external_brain_drive

./: .gitignore  README.md  index.html  package-lock.json  package.json
docs/: GIT_WORKSPACE_COMMANDS.md  HOW_TO_USE.md  STATUS.md
src/: App.css  App.tsx  ContactCard.tsx  EntityDetail.tsx  api.ts  labels.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: backup.rs  commands.rs  db.rs  document.rs  entity.rs  error.rs  lib.rs  main.rs  state.rs  workspace.rs
